--- a/about.html
+++ b/about.html
@@ -106,6 +106,16 @@
 
             </div>
     </section>
+    
+  <!--________________________________Footer____________________________________-->
+  <footer style="margin-top:20px;" class="footer">
+    <div class="social">
+      <a href="https://www.facebook.com/eknowledge.learn"><i class="fa fa-facebook"></i></a>
+      <a href="#"><i class="fa fa-solid fa-phone"></i></a>
+      <a href="#"><i class="fa fa-envelope"></i></a>
+    </div>
+    <p class="copyright">© 2022 Knowledge Academy. All Rights Reserved.</p>
+  </footer>
 
 </body>
 </html>
