--- a/All_Courses.html
+++ b/All_Courses.html
@@ -39,12 +39,9 @@
                 <a class="nav-link " href="about.html">About</a>
             </li>
               <li class="nav-item active">
-                <a class="nav-link " href="All_Courses.html">Courses</a>
+                <a class="nav-link active" href="All_Courses.html">Courses</a>
               </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="teachers.html">Teachers</a>
-              </li>
-              
+  
               <li class="nav-item">
                 <a class="nav-link" href="CRUDS.html">Dashboard</a>
             </li>
@@ -68,23 +65,27 @@
       </div>
 
 
-      <!-- Footer -->
+    <!--________________________________Footer____________________________________-->
+    <footer>
+      <div class="footer-content">
+        <h3>Knowledge Academy</h3>
+        <p>Offer a range of training programs, courses, and follow-ups to our students in training programs by hand-picked instructors and expertly crafted courses for students.</p>
+        <ul class="socials">
+              <li><a href="https://www.facebook.com/eknowledge.learn"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://www.instagram.com/eknowledge.learn/"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/eknowledge-learn/"><i class="fa fa-linkedin-square"></i></a></li>
+        </ul>
+      </div>
+      <div class="footer-bottom">
+        <p>© 2022 Knowledge Academy. All Rights Reserved.</p>
+      </div>
+    </footer>
 
-    <footer style="margin-top:20px;" class="footer">
-        <div class="social">
-          <a href="https://www.facebook.com/eknowledge.learn"><i class="fa fa-facebook"></i></a>
-          <a href="#"><i class="fa fa-solid fa-phone"></i></a>
-          <a href="#"><i class="fa fa-envelope"></i></a>
-        </div>
-        <p class="copyright">© 2022 Knowledge Academy. All Rights Reserved.</p>
-      </footer>
-
-     <!-- JS -->
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/All_Courses.js"></script>
+    <!-- JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/All_Courses.js"></script>
 </body>
 </html>
