--- a/CRUDS.html
+++ b/CRUDS.html
@@ -43,10 +43,6 @@
           <a class="nav-link" href="All_Courses.html">Courses</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="teachers.html">Teachers</a>
-        </li>
-      
-        <li class="nav-item">
           <a class="nav-link active" href="CRUDS.html">Dashboard</a>
         </li>
       </ul>
@@ -96,13 +92,19 @@
   </div>
 
   <!--________________________________Footer____________________________________-->
-  <footer style="margin-top:20px;" class="footer">
-    <div class="social">
-      <a href="https://www.facebook.com/eknowledge.learn"><i class="fa fa-facebook"></i></a>
-      <a href="#"><i class="fa fa-solid fa-phone"></i></a>
-      <a href="#"><i class="fa fa-envelope"></i></a>
+  <footer>
+    <div class="footer-content">
+      <h3>Knowledge Academy</h3>
+      <p>Offer a range of training programs, courses, and follow-ups to our students in training programs by hand-picked instructors and expertly crafted courses for students.</p>
+      <ul class="socials">
+            <li><a href="https://www.facebook.com/eknowledge.learn"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/eknowledge.learn/"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/company/eknowledge-learn/"><i class="fa fa-linkedin-square"></i></a></li>
+      </ul>
     </div>
-    <p class="copyright">© 2022 Knowledge Academy. All Rights Reserved.</p>
+    <div class="footer-bottom">
+      <p>© 2022 Knowledge Academy. All Rights Reserved.</p>
+    </div>
   </footer>
     
 
