--- a/index.html
+++ b/index.html
@@ -46,10 +46,6 @@
           <a class="nav-link" href="All_Courses.html">Courses</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="teachers.html">Teachers</a>
-        </li>
-      
-        <li class="nav-item">
           <a class="nav-link" href="CRUDS.html">Dashboard</a>
       </li>
       </ul>
@@ -67,10 +63,7 @@
     <div class="header">
         <div class="content">
             <h1 class="title">Knowledge Academy</h1>
-            <p class="para">Offer a range of full training programs, free courses, and follow-up to
-                            our students in training programs by the hand-picked instructors and
-                            expertly crafted courses for modern students.
-            </p>          
+            <p class="para">Offer a range of training programs, courses, and follow-ups to our students in training programs by hand-picked instructors and expertly crafted courses for students.</p>          
         </div>
         <img src="imgs/header.jpg" class="img-fluid" alt="Responsive image">
     </div>
@@ -89,7 +82,7 @@
     <div style="width: 100%; display: flex; justify-content: space-around; margin-top: 30px;">
         <a href="All_Courses.html" type="button" class="btn btn-lg"
           style="font-family: Arial, Helvetica, sans-serif; font-weight: meduim;
-                  color: #ffffff; background-color: #001f54;">All Courses</a>
+                  color: #ffffff; background-color: #1d3557;">All Courses</a>
     </div>
     
   </div>
@@ -106,13 +99,19 @@
   </div>
 
   <!--________________________________Footer____________________________________-->
-  <footer style="margin-top:20px;" class="footer">
-    <div class="social">
-      <a href="https://www.facebook.com/eknowledge.learn"><i class="fa fa-facebook"></i></a>
-      <a href="#"><i class="fa fa-solid fa-phone"></i></a>
-      <a href="#"><i class="fa fa-envelope"></i></a>
+  <footer>
+    <div class="footer-content">
+      <h3>Knowledge Academy</h3>
+      <p>Offer a range of training programs, courses, and follow-ups to our students in training programs by hand-picked instructors and expertly crafted courses for students.</p>
+      <ul class="socials">
+            <li><a href="https://www.facebook.com/eknowledge.learn"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/eknowledge.learn/"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/company/eknowledge-learn/"><i class="fa fa-linkedin-square"></i></a></li>
+      </ul>
     </div>
-    <p class="copyright">© 2022 Knowledge Academy. All Rights Reserved.</p>
+    <div class="footer-bottom">
+      <p>© 2022 Knowledge Academy. All Rights Reserved.</p>
+    </div>
   </footer>
 
   <!-- bootstrap -->
